--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,55 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>ljz_groupid</groupId>
-  <artifactId>JavaSpringBootExperimentation</artifactId>
-      <parent>
-        <groupId>io.pivotal.education.core-spring</groupId>
-        <artifactId>parentProject</artifactId>
-        <version>5.0.c.RELEASE</version>
-    </parent>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <name>Java Spring Boot Experimentation Parent</name>
-  <description>Java Spring Boot Experimentation Parent</description>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>ljz_groupid</groupId>
+	<artifactId>JavaSpringBootExperimentation</artifactId>
+
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<!-- <version>2.2.2.RELEASE</version> -->
+		<!-- <version>2.3.0.RELEASE</version> -->
+		<!-- <version>2.3.2.RELEASE</version> -->
+		<version>2.3.4.RELEASE</version>
+	</parent>
+
+
+	<dependencies>
+		<!-- // Although we are not using Spring Boot until Day 3, we do use // 
+			SpringApplication which is a Spring Boot class. The starters // are also 
+			a convenient way of pulling in the most common // Spring and Testing dependencies. -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<!-- Needed for the Spring jdbc namespace -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+		</dependency>
+		<!-- Database -->
+		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+		</dependency>
+		<!-- Add JAXB that is dropped in JDK 9 -->
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+		</dependency>
+	</dependencies>
+
+	<modules>
+		<module>JavaSpringBootExperimentation</module>
+	</modules>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
+	<name>Java Spring Boot Experimentation Parent</name>
+	<description>Java Spring Boot Experimentation Parent</description>
 </project>
