--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,31 @@
 		<version>2.3.4.RELEASE</version>
 	</parent>
 
+    <properties>
+        <!-- Override some defaults from Spring Boot. -->
+        <spring.cloud.build>Hoxton.RELEASE</spring.cloud.build>
 
+        <!-- Versions of other dependencies not in spring IO. -->
+        <easymock.version>3.1</easymock.version>
+        <hibernate.jmx.version>3.5.6-Final</hibernate.jmx.version>
+        <jamon.version>2.81</jamon.version>
+
+
+        <!-- Uncomment the Java version you want, comment the other -->
+            <!-- <java.version>1.8</java.version> -->
+            <!-- <java.version>11</java.version> -->
+        <java.version>14</java.version>
+
+        <!-- Enable maven support for Servlet 3 - no web.xml -->
+        <failOnMissingWebXml>false</failOnMissingWebXml>
+
+        <!-- Add JAXB that is dropped in JDK 9 -->
+        <jaxb-api.version>2.3.0</jaxb-api.version>
+        
+        <!-- Without this, Eclipse will flag an error on pom.xml -->
+        <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+    </properties>
+    
 	<dependencies>
 		<!-- // Although we are not using Spring Boot until Day 3, we do use // 
 			SpringApplication which is a Spring Boot class. The starters // are also 
@@ -44,7 +68,6 @@
 
 	<modules>
 		<module>JavaBasedAnnotation</module>
-        <module>ConfigurationBased</module>
 		<module>ConfigurationBasedAnnotation</module>
 	</modules>
 	
