--- a/pom.xml
+++ b/pom.xml
@@ -1,79 +1,47 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>ljz_groupid</groupId>
-	<artifactId>JavaSpringBootExperimentation</artifactId>
-
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.4.RELEASE</version>
+		<version>2.4.2</version>
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-
-    <properties>
-        <!-- Override some defaults from Spring Boot. -->
-        <spring.cloud.build>Hoxton.RELEASE</spring.cloud.build>
-
-        <!-- Versions of other dependencies not in spring IO. -->
-        <easymock.version>3.1</easymock.version>
-        <hibernate.jmx.version>3.5.6-Final</hibernate.jmx.version>
-        <jamon.version>2.81</jamon.version>
-
-
-        <!-- Uncomment the Java version you want, comment the other -->
-            <!-- <java.version>1.8</java.version> -->
-            <!-- <java.version>11</java.version> -->
-        <java.version>14</java.version>
-
-        <!-- Enable maven support for Servlet 3 - no web.xml -->
-        <failOnMissingWebXml>false</failOnMissingWebXml>
-
-        <!-- Add JAXB that is dropped in JDK 9 -->
-        <jaxb-api.version>2.3.0</jaxb-api.version>
-        
-        <!-- Without this, Eclipse will flag an error on pom.xml -->
-        <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
-    </properties>
-    
+	<groupId>practice</groupId>
+	<artifactId>SpringBootExperimentation</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>SpringBootExperimentation</name>
+	<description>Demo project for Spring Boot</description>
+	<properties>
+		<java.version>15</java.version>
+	</properties>
 	<dependencies>
-		<!-- // Although we are not using Spring Boot until Day 3, we do use // 
-			SpringApplication which is a Spring Boot class. The starters // are also 
-			a convenient way of pulling in the most common // Spring and Testing dependencies. -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!-- Needed for the Spring jdbc namespace -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-jdbc</artifactId>
-		</dependency>
-		<!-- Database -->
-		<dependency>
-			<groupId>org.hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-		</dependency>
-		<!-- Add JAXB that is dropped in JDK 9 -->
-		<dependency>
-			<groupId>javax.xml.bind</groupId>
-			<artifactId>jaxb-api</artifactId>
-		</dependency>
 	</dependencies>
+	
+	<packaging>pom</packaging>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 
 	<modules>
+		<module>AnnotationBasedConfiguration</module>
 		<module>JavaBasedAnnotation</module>
-		<module>ConfigurationBasedAnnotation</module>
-		<module>module_02052021</module>
 	</modules>
-	
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
-	<name>Java Spring Boot Experimentation Parent</name>
-	<description>Java Spring Boot Experimentation Parent</description>
 </project>
