Trying to get security to work with actuators

--- a/Actuators/src/main/resources/application.properties
+++ b/Actuators/src/main/resources/application.properties
@@ -56,4 +56,6 @@ management.endpoints.web.exposure.include=*
 # This is just an example - the word, "application" is nothing magic.
 
 
-
+#spring.security.user.name=sergey
+#spring.security.user.password=sergey
+#spring.security.user.roles=ACTUATOR
