Added some commented-out lines to application.properties

--- a/Actuators/src/main/resources/application.properties
+++ b/Actuators/src/main/resources/application.properties
@@ -1,2 +1,13 @@
 # Expose all endpoints
 management.endpoints.web.exposure.include=*
+
+# Exposing HTTP Endpoints
+# Expose just beans, env and info endpoints
+# NOTE: health and info not exposed unless listed
+# management.endpoints.web.exposure.include=beans,env,info
+
+# If endpoints exposed explicitly, defaults overridden
+# Expose all endpoints
+# management.endpoints.web.exposure.include=*
+# Default setup
+# management.endpoints.web.exposure.include=health,info
