Added some more commented-out lines to application.properties

--- a/Actuators/src/main/resources/application.properties
+++ b/Actuators/src/main/resources/application.properties
@@ -1,6 +1,59 @@
-# Expose all endpoints
+# Default setup: all exposed, no exclusions
+# For security reasons, only two endpoints are exposed by
+# default:
+#  /actuator/health
+#  /actuator/info
+management.endpoints.jmx.exposure.exclude=
+#management.endpoints.web.exposure.include=*
+# * means all.
+#management.endpoints.web.exposure.include=beans,metrics
+
+# Next line
+#management.endpoints.web.base-path=/admin
+# causes the actuators to be accessible
+# via localhost:8080(or whatever URL is used to
+# access the application)/admin, i.e.
+# http://localhost:8080/admin/
+# instead of the usual
+# http://localhost:8080/actuator/
+
+# Example:
+# Expose just beans, env and info endpoints.
+# NOTE: health and info are not exposed unless listed
+# explicitly once the defaults are overidden.
+#management.endpoints.web.exposure.include=beans,env,info
+# With the line above uncommented, the following actuators
+# are exposed:
+# {
+#   "_links": {
+#     "self": {
+#       "href": "http://localhost:8080/actuator",
+#       "templated": false
+#     },
+#     "beans": {
+#       "href": "http://localhost:8080/actuator/beans",
+#       "templated": false
+#     },
+#     "info": {
+#       "href": "http://localhost:8080/actuator/info",
+#       "templated": false
+#     },
+#     "env": {
+#       "href": "http://localhost:8080/actuator/env",
+#       "templated": false
+#     },
+#     "env-toMatch": {
+#       "href": "http://localhost:8080/actuator/env/{toMatch}",
+#       "templated": true
+#     }
+#   }
+# }
+
 management.endpoints.web.exposure.include=*
 
+# http://localhost:8080/actuator/loggers/application shows the log level
+# of the "application" package which contains class ActuatorApplication.
+# This is just an example - the word, "application" is nothing magic.
 # Exposing HTTP Endpoints
 # Expose just beans, env and info endpoints
 # NOTE: health and info not exposed unless listed
@@ -10,4 +63,9 @@ management.endpoints.web.exposure.include=*
 # Expose all endpoints
 # management.endpoints.web.exposure.include=*
 # Default setup
+
+
+#spring.security.user.name=sergey
+#spring.security.user.password=sergey
+#spring.security.user.roles=ACTUATOR
 # management.endpoints.web.exposure.include=health,info
