--- a/Database/src/main/resources/application.properties
+++ b/Database/src/main/resources/application.properties
@@ -68,3 +68,7 @@ management.endpoints.web.exposure.include=*
 #spring.security.user.password=sergey
 #spring.security.user.roles=ACTUATOR
 # management.endpoints.web.exposure.include=health,info
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+debug=true
