--- a/Database/src/main/resources/application.properties
+++ b/Database/src/main/resources/application.properties
@@ -71,4 +71,4 @@ management.endpoints.web.exposure.include=*
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-debug=true
+#debug=true
