--- a/JavaBasedAnnotation/pom.xml
+++ b/JavaBasedAnnotation/pom.xml
@@ -6,4 +6,11 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>JavaBasedAnnotation</artifactId>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.springframework.boot</groupId>
+  		<artifactId>spring-boot-configuration-processor</artifactId>
+  		<optional>true</optional>
+  	</dependency>
+  </dependencies>
 </project>
