--- a/JavaBasedAnnotation/src/main/resources/app.properties
+++ b/JavaBasedAnnotation/src/main/resources/app.properties
@@ -1,3 +1,8 @@
 # This file is referenced in MyInteger.java via
 # @PropertySource("file:src/main/resources/app.properties")
 myInt=5
+
+acme.client.host=192.168.1.42
+acme.client.port=8080
+acme.client.logdir=/logs
+acme.client.timeout=2000
