--- a/JavaBasedAnnotation/src/main/resources/app.properties
+++ b/JavaBasedAnnotation/src/main/resources/app.properties
@@ -4,5 +4,11 @@ myInt=5
 
 acme.client.host=192.168.1.42
 acme.client.port=8080
-acme.client.logdir=/logs
-acme.client.timeout=2000
+acme.client.logDir=/logs
+#acme.client.timeout=2000
+
+
+#acme_client_host=192.168.1.42
+#acme_client_port=8080
+#acme_client_logDir=/logs
+#acme_client_timeout=2000
