Still not working.

--- a/Database/src/main/resources/application-dev.properties
+++ b/Database/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 logging.level.application=DEBUG
 logging.level.web=WARN
 logging.file.path=C:/cygwin64/home/lylez/SpringBootExperimentation/Database/log
-logging.level.org.springframework=OFF
+# LJZ logging.level.org.springframework=OFF
 # Doesn't work: logging.file.name=myfile.log
 # the default logging level of the Logger is preset to INFO, meaning that TRACE and DEBUG messages are not visible.
 # In order to activate them without changing the configuration, we can pass the -debug or -trace arguments on the command line:
