Added spring.jpa.hibernate.ddl-auto=none to /Database/src/main/resources/application.properties per Sergi to stop the presence of a class annotated with @Entity from overwriting the existing database. It builds and compiles.

--- a/Database/src/main/resources/application.properties
+++ b/Database/src/main/resources/application.properties
@@ -73,3 +73,18 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 #debug=true
+
+# The following was added per Sergi in his email Sat 3/27/2021 12:00 PM
+# in which he stated:
+
+# JPA will try to create the database schema for you, but you are creating it explicitly.
+# What happens is: your database scripts are executed and then JPA recreates the database schema
+# which leads to data deletion.
+# 
+# Add `spring.jpa.hibernate.ddl-auto=none` in your `application.properties` to instruct JPA you don't
+# want the schema to be created from your entities (recommended for production). Just tested it with
+# your sample and it outputs 2 instead of 0. Here's some further reading:
+# https://docs.spring.io/spring-boot/docs/current/reference/html/howto.html#howto-database-initialization.
+
+
+spring.jpa.hibernate.ddl-auto=none
