--- a/JavaBasedAnnotation/src/main/resources/app.properties
+++ b/JavaBasedAnnotation/src/main/resources/app.properties
@@ -5,7 +5,8 @@ myInt=5
 acme.client.host=192.168.1.42
 acme.client.port=8080
 acme.client.logDir=/logs
-#acme.client.timeout=2000
+acme.client.timeout=2000
+
 
 
 #acme_client_host=192.168.1.42
