--- a/JavaBasedAnnotation/src/main/resources/application.properties
+++ b/JavaBasedAnnotation/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 # Next line allows "Bean Overriding", which is allowed
 # by Spring (by default), but not by Spring Boot.
 spring.main.allow-bean-definition-overriding=true
+
+management.endpoints.web.exposure.include=*
+management.endpoints.jmx.exposure.exclude=
