Got example of relaxed binding to work in project JavaBasedAnnotation.

--- a/JavaBasedAnnotation/src/main/resources/app.properties
+++ b/JavaBasedAnnotation/src/main/resources/app.properties
@@ -2,11 +2,10 @@
 # @PropertySource("file:src/main/resources/app.properties")
 myInt=5
 
-acme.client.host=192.168.1.42
-acme.client.port=8080
-acme.client.logDir=/logs
-acme.client.timeout=2000
-
+acme.client-connection.host=192.168.1.42
+acme.client-connection.port=8080
+acme.client-connection.logDir=/logs
+acme.client_connection.time_out=2000
 
 
 #acme_client_host=192.168.1.42
