--- a/JavaBasedAnnotation/src/main/resources/app.properties
+++ b/JavaBasedAnnotation/src/main/resources/app.properties
@@ -2,7 +2,8 @@
 # @PropertySource("file:src/main/resources/app.properties")
 myInt=5
 
-acme.client-connection.host=192.168.1.42
+# Example of relaxed binding
+acme.client_connection.host=192.168.1.42
 acme.client-connection.port=8080
 acme.client-connection.logDir=/logs
 acme.client_connection.time_out=2000
